--- a/Back/src/views/Flavors/flavors.ejs
+++ b/Back/src/views/Flavors/flavors.ejs
@@ -32,44 +32,44 @@
 
  <h3>Aromas</h3> 
     <ul>
-        <% for( let i = 1; i < flavors.length; i++ ) { %>   
+        <% for( let i = 0; i < aroma.length; i++ ) { %>   
     
             <li class="btn btn-outline-warning btn-sm">
                 <div class="card text-white bg-dark" style="width: 18rem;">
                     <div class="card-body flavors">
                         <h5 class="card-title m-15">
-                            <%= flavors[i].name %>
+                            <%= aroma[i].NombreAroma %>
                         </h5>
                         <h6 class="card-subtitle mb-2 text-muted">
-                            <%= flavors[i].brand %>
+                            <%= aroma[i].Marca %>
                         </h6>
                         <p class="card-text">
                             Stock:
-                            <%= flavors[i].stock %> ML
+                            <%= aroma[i].CantidadDisponible %> ML
                         </p>
                         <p class="card-text">
                            Costo:
-                            <%= flavors[i].price %> <%= flavors[i].costType %> /ML
+                            <%= aroma[i].CostoUnitario %> /ML
                         </p>
                         <div class="cardsFlavorContainer card-footer">
-                            <a href="/flavors/detail/<%= flavors[i].idFlavor %>" class="card-link">
+                            <a href="/flavors/detail/<%= aroma[i].id %>" class="card-link">
                                 <button type="submit" class="btn btn-outline-danger btn-sm">Detalle
                                 </button>
                             </a>
-                            <a href="/flavors/delete/<%= flavors[i].idFlavor %>" class="card-link">
+                            <a href="/flavors/delete/<%= aroma[i].id %>" class="card-link">
                                 <form method="POST"
-                                    action="/flavors/delete/<%= flavors[i].idFlavor %>?_method=DELETE">
+                                    action="/flavors/delete/<%= aroma[i].id %>?_method=DELETE">
                                     <button type="submit" class="btn btn-outline-danger btn-sm">
                                         Eliminar
                                     </button>
                                 </form>
                             </a>
-                            <a href="/flavors/edit/<%= flavors[i].idFlavor %>" class="card-link">
+                            <a href="/flavors/edit/<%= aroma[i].id %>" class="card-link">
                                 <button type="submit" class="btn btn-outline-danger btn-sm">Editar</button>
                             </a>
                         </div>
                     </div>
-                </div>
+                </div>z
             
         </li>
         <% } %>
