--- a/Back/src/views/Flavors/flavors.ejs
+++ b/Back/src/views/Flavors/flavors.ejs
@@ -69,7 +69,7 @@
                             </a>
                         </div>
                     </div>
-                </div>z
+                </div>
             
         </li>
         <% } %>
