--- a/Back/src/views/index.ejs
+++ b/Back/src/views/index.ejs
@@ -17,9 +17,11 @@
   <main class="indexMain">
    <div class="view1">
     <%- include('partials/registrarVenta.ejs') %>
+    <%-  %>
    </div>
    <div class="view2">
-    <%- include('partials/costoVenta.ejs') %>
+    Aca iria include('partials/costoVenta.ejs')
+    <!-- <%-  %> -->
    </div>
    <div class="view3">Cantidad de Stock Bajo
     
