--- a/Back/src/views/recipe/create.ejs
+++ b/Back/src/views/recipe/create.ejs
@@ -25,8 +25,8 @@
 
         <label for="">Aroma 1</label>
         <select class="form-control-sm" id="flavor1" name="flavor1">
-            <% for( let i = 0; i < flavors.length; i++ ) { %>
-                <option value="<%= flavors[i].name %>"><%= flavors[i].name %></option>
+            <% for( let i = 0; i < aroma.length; i++ ) { %>
+                <option value="<%= aroma[i].id %>" placeholder=""><%= aroma[i].NombreAroma %></option>
             <% } %>
         </select>
         <label for="">porcentaje</label>
@@ -35,8 +35,8 @@
 
         <label for="">Aroma 2</label>
         <select class="form-control-sm" id="flavor2" name="flavor2">
-            <% for( let i = 0; i < flavors.length; i++ ) { %>
-                <option value="<%= flavors[i].name %>"><%= flavors[i].name %></option>
+            <% for( let i = 0; i < aroma.length; i++ ) { %>
+                <option value="<%= aroma[i].id  %>"><%= aroma[i].NombreAroma %></option>
             <% } %>
         </select>
         <label for="">porcentaje</label>
@@ -45,8 +45,8 @@
 
         <label for="">Aroma 3</label>
         <select class="form-control-sm" id="flavor3" name="flavor3">
-            <% for( let i = 0; i < flavors.length; i++ ) { %>
-                <option value="<%= flavors[i].name %>"><%= flavors[i].name %></option>
+            <% for( let i = 0; i < aroma.length; i++ ) { %>
+                <option value="<%= aroma[i].id  %>"><%= aroma[i].NombreAroma %></option>
             <% } %>
         </select>
         <label for="">porcentaje</label>
@@ -55,8 +55,8 @@
 
         <label for="">Aroma 4</label>
         <select class="form-control-sm" id="flavor4" name="flavor4">
-            <% for( let i = 0; i < flavors.length; i++ ) { %>
-                <option value="<%= flavors[i].name %>"><%= flavors[i].name %></option>
+            <% for( let i = 0; i < aroma.length; i++ ) { %>
+                <option value="<%= aroma[i].id  %>"><%= aroma[i].NombreAroma %></option>
             <% } %>
         </select>
         <label for="">porcentaje</label>
@@ -64,8 +64,8 @@
         <br>
         <label for="">Aroma 5</label>
         <select class="form-control-sm" id="flavor5" name="flavor5">
-            <% for( let i = 0; i < flavors.length; i++ ) { %>
-                <option value="<%= flavors[i].name %>"><%= flavors[i].name %></option>
+            <% for( let i = 0; i < aroma.length; i++ ) { %>
+                <option value="<%= aroma[i].id  %>"><%= aroma[i].NombreAroma %></option>
             <% } %>
         </select>
         <label for="">porcentaje</label>
@@ -73,8 +73,8 @@
         <br>
         <label for="">Aroma 6</label>
         <select class="form-control-sm" id="flavor6" name="flavor6">
-            <% for( let i = 0; i < flavors.length; i++ ) { %>
-                <option value="<%= flavors[i].name %>"><%= flavors[i].name %></option>
+            <% for( let i = 0; i < aroma.length; i++ ) { %>
+                <option value="<%= aroma[i].id  %>"><%= aroma[i].NombreAroma %></option>
             <% } %>
         </select>
         <label for="">porcentaje</label>
@@ -83,8 +83,8 @@
         <br>
         <label for="">Aroma 7</label>
         <select class="form-control-sm" id="flavor7" name="flavor7">
-            <% for( let i = 0; i < flavors.length; i++ ) { %>
-                <option value="<%= flavors[i].name %>"><%= flavors[i].name %></option>
+            <% for( let i = 0; i < aroma.length; i++ ) { %>
+                <option value="<%= aroma[i].id  %>"><%= aroma[i].NombreAroma %></option>
             <% } %>
         </select>
         <label for="">porcentaje</label>
@@ -93,8 +93,8 @@
         <br>
         <label for="">Aroma 8</label>
         <select class="form-control-sm" id="flavor8" name="flavor8">
-            <% for( let i = 0; i < flavors.length; i++ ) { %>
-                <option value="<%= flavors[i].name %>"><%= flavors[i].name %></option>
+            <% for( let i = 0; i < aroma.length; i++ ) { %>
+                <option value="<%= aroma[i].id  %>"><%= aroma[i].NombreAroma %></option>
             <% } %>
         </select>
         <label for="">porcentaje</label>
