--- a/Back/src/views/recipe/recipes.ejs
+++ b/Back/src/views/recipe/recipes.ejs
@@ -22,8 +22,7 @@
                     </form>
                 </a>
             </li>
-            <a class="nav-link nav-fill active btn-outline-warning w-10" aria-current="page" href="recipes/create">Crear
-                Nueva Receta</a>
+            <a class="nav-link nav-fill active btn-outline-warning w-10" aria-current="page" href="recipes/create">Crear Receta</a>
         </ul>
         <!-- termina navbar -->
         <h3>Recetas</h3>
