recipe and flavor, details and delete ok. working on cmv - costo mercaderia vendidas

--- a/Back/src/views/Flavors/flavors.ejs
+++ b/Back/src/views/Flavors/flavors.ejs
@@ -51,6 +51,11 @@
                            Costo:
                             <%= aroma[i].CostoUnitario %> /ML
                         </p>
+                        <p class="card-text">
+                            Actualizado:
+                             <%= aroma[i].FechaRegistro %>
+                         </p>
+
                         <div class="cardsFlavorContainer card-footer">
                             <a href="/flavors/detail/<%= aroma[i].id %>" class="card-link">
                                 <button type="submit" class="btn btn-outline-danger btn-sm">Detalle
