--- a/Back/src/views/index.ejs
+++ b/Back/src/views/index.ejs
@@ -20,8 +20,8 @@
     <%-  %>
    </div>
    <div class="view2">
-    Aca iria include('partials/costoVenta.ejs')
-    <!-- <%-  %> -->
+
+    <%- include('partials/costoVenta.ejs') %>
    </div>
    <div class="view3">Cantidad de Stock Bajo
     
